// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handleBrokenLinks reports all broken links 1`] = `
"Docusaurus found broken links / anchors!

Please check the pages of your site in the list below, and make sure you don't reference any path that does not exist.
Note: it's possible to ignore broken links with the 'onBrokenLinks' or 'onBrokenAnchors' Docusaurus configuration, and let the build pass.

Exhaustive list of all broken links found:
- Broken link on source page path = /docs/good doc with space:
   -> linking to ./some%20other%20non-existent%20doc1 (resolved as: /docs/some%20other%20non-existent%20doc1)
   -> linking to ./break%2F..%2F..%2Fout2 (resolved as: /docs/break%2F..%2F..%2Fout2)

- Broken link on source page path = /docs/goodDoc:
   -> linking to ../anotherGoodDoc#reported-because-of-bad-relative-path1 (resolved as: /anotherGoodDoc)
   -> linking to ./docThatDoesNotExist2 (resolved as: /docs/docThatDoesNotExist2)
   -> linking to ./badRelativeLink3 (resolved as: /docs/badRelativeLink3)
   -> linking to ../badRelativeLink4 (resolved as: /badRelativeLink4)

- Broken link on source page path = /community:
   -> linking to /someNonExistentDoc1
   -> linking to /badLink2
   -> linking to ./badLink3 (resolved as: /badLink3)

- Broken link on source page path = /page1:
   -> linking to /link1
   -> linking to /files/hey.html
   -> linking to /javadoc
   -> linking to /files/hey
   -> linking to /javadoc/index.html
   -> linking to /javadoc/index.html#foo (resolved as: /javadoc/index.html)
   -> linking to /emptyFolder

- Broken link on source page path = /page2:
   -> linking to /docs/link2
   -> linking to /emptyFolder/
   -> linking to /javadoc/
   -> linking to /hey/link3
   -> linking to /javadoc/index.html
   -> linking to /files/file.zip

"
`;

exports[`handleBrokenLinks reports frequent broken links 1`] = `
"Docusaurus found broken links / anchors!

Please check the pages of your site in the list below, and make sure you don't reference any path that does not exist.
Note: it's possible to ignore broken links with the 'onBrokenLinks' or 'onBrokenAnchors' Docusaurus configuration, and let the build pass.

It looks like some of the broken links we found appear in many pages of your site.
Maybe those broken links appear on all pages through your site layout?
We recommend that you check your theme configuration for such links (particularly, theme navbar and footer).
Frequent broken links are linking to:
- /frequent
- ./maybe-not

Exhaustive list of all broken links found:
- Broken link on source page path = /docs/good doc with space:
   -> linking to ./some%20other%20non-existent%20doc1 (resolved as: /docs/some%20other%20non-existent%20doc1)
   -> linking to ./break%2F..%2F..%2Fout2 (resolved as: /docs/break%2F..%2F..%2Fout2)
   -> linking to /frequent
   -> linking to ./maybe-not (resolved as: /docs/maybe-not)

- Broken link on source page path = /docs/goodDoc:
   -> linking to ../anotherGoodDoc#reported-because-of-bad-relative-path1 (resolved as: /anotherGoodDoc)
   -> linking to ./docThatDoesNotExist2 (resolved as: /docs/docThatDoesNotExist2)
   -> linking to ./badRelativeLink3 (resolved as: /docs/badRelativeLink3)
   -> linking to ../badRelativeLink4 (resolved as: /badRelativeLink4)
   -> linking to /frequent
   -> linking to ./maybe-not (resolved as: /docs/maybe-not)

- Broken link on source page path = /community:
   -> linking to /someNonExistentDoc1
   -> linking to /badLink2
   -> linking to ./badLink3 (resolved as: /badLink3)
   -> linking to /frequent
   -> linking to ./maybe-not (resolved as: /maybe-not)

- Broken link on source page path = /page1:
   -> linking to /link1
   -> linking to /files/hey.html
   -> linking to /javadoc
   -> linking to /files/hey
   -> linking to /javadoc/index.html
   -> linking to /javadoc/index.html#foo (resolved as: /javadoc/index.html)
   -> linking to /emptyFolder
   -> linking to /frequent
   -> linking to ./maybe-not (resolved as: /maybe-not)

- Broken link on source page path = /page2:
   -> linking to /docs/link2
   -> linking to /emptyFolder/
   -> linking to /javadoc/
   -> linking to /hey/link3
   -> linking to /javadoc/index.html
   -> linking to /files/file.zip
   -> linking to /frequent
   -> linking to ./maybe-not (resolved as: /maybe-not)

"
`;
